# fastapi-boilerplate

./: .env  .gitignore  Dockerfile  pyproject.toml  save_death_track.py
.github/ISSUE_TEMPLATE/: feature_request.md
app/: database.py  main.py
app/base/: base_repository.py  base_request.py  base_service.py
app/core/: config.py  logging_conf.py  security.py  transactional.py
app/domain/: api.py
app/domain/auth/: endpoints.py
app/domain/user/: endpoints.py  repository.py  service.py
app/models/: user.py
app/routers/: auth_router.py  user_router.py
app/schemas/: user_schema.py
app/utils/: password.py
records/: Ice Carbon Diablo X.csv
tracks/: Ice Carbon Diablo X.txt
